# publishing-python-package

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
my-first-package/: README.md  pyproject.toml  setup.cfg
my-first-package/src/my_first_package/: list_dir.py
