[tool.poetry]
name = "publishing-python-package"
version = "0.1.0"
description = ""
authors = ["Jose Nunes"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.mypy]
exclude = [
    ".venv"
]
cache_dir = "/tmp/.mypy_cache"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
