[metadata]
name = my-first-package-jose-nunes
version = 0.0.1
author = José Nunes
author_email = josenunesra@gmail.com
description = Creating my first python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josejnra/my-python-package/my-first-package
project_urls =
    Bug Tracker = https://github.com/josejnra/my-python-package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
